--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,5 +3,7 @@
    --main-color: #23272f;
    --light-color: #fff;
    --primary-color: #059;
+   --primary-hover-color: rgb(5, 107, 190);
    --font-family: "Roboto";
+   --transition-delay: 300ms;
 }
