загрузка данных в таблицу, подгрузка данных

--- a/src/components/pages/description/Description.module.scss
+++ b/src/components/pages/description/Description.module.scss
@@ -1,5 +1,5 @@
 .page {
-   background-color: var(--bg-dark);
+   background-color: var(--dark-color);
    color: var(--light-color);
    min-height: 100vh;
 }
