--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-   background-color: var(--bg-dark);
+   background-color: var(--dark-color);
    color: var(--light-color);
    padding: 15px 0;
    text-transform: uppercase;
