--- a/src/components/ui/loader/Loader.module.scss
+++ b/src/components/ui/loader/Loader.module.scss
@@ -8,7 +8,7 @@
    border-radius: 50%;
    width: 48px;
    height: 48px;
-   color: var(--bg-dark);
+   color: var(--dark-color);
 }
 .loader:before,
 .loader:after {
