заглушка при отсутствии данных и отключение кнопки очистки данных при нулевом значении длины массива с данными

--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -16,4 +16,11 @@
    &:hover {
       background-color: var(--danger-hover-color);
    }
+
+   &:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      background-color: var(--danger-color); /* Цвет фона для неактивной кнопки (можно оставить таким же) */
+      color: var(--light-color); /* Цвет текста для неактивной кнопки (можно оставить таким же) */
+   }
 }
