--- a/src/components/ui/modal/Modal.module.scss
+++ b/src/components/ui/modal/Modal.module.scss
@@ -1,5 +1,3 @@
-/* Modal.module.scss */
-
 .overlay {
    position: fixed;
    top: 0;
@@ -19,6 +17,17 @@
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
    width: 70%;
    max-width: 600px;
+
+   opacity: 0;
+   transform: translateY(-20px);
+   animation: fadeIn 0.3s ease forwards;
+
+   @keyframes fadeIn {
+      to {
+         opacity: 1;
+         transform: translateY(0);
+      }
+   }
 }
 
 .header {
