--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./fonts.scss";
-@import "./vars.scss";
-@import "./null.scss";
-@import "./global.scss";
+@import "./fonts";
+@import "./vars";
+@import "./null";
+@import "./global";
