--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,6 +2,7 @@ $dark-color: #23272f;
 $dark-hover-color: #40434a;
 $main-color: #23272f;
 $light-color: #fff;
+$light-opacity-color: #aaa;
 $primary-color: #059;
 $primary-hover-color: rgb(5, 107, 190);
 $danger-color: #ee204d;
