--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -1,19 +1,28 @@
 @import "@/styles/vars";
 
 .button {
-   color: $light-color;
    border-radius: 4px;
-   background-color: $primary-color;
    padding: 8px 16px;
    transition: $transition-delay;
+   color: $light-color;
+}
 
-   &:hover {
+.primary {
+   background-color: $primary-color;
+
+   &:disabled {
+      background-color: rgba(0, 84, 153, 0.447);
+      cursor: not-allowed;
+   }
+
+   &:hover:not(&:disabled) {
       background-color: $primary-hover-color;
    }
 }
 
-.secondaty {
+.secondary {
    background-color: $dark-color;
+
    &:hover {
       background-color: $dark-hover-color;
    }
@@ -29,7 +38,7 @@
    &:disabled {
       opacity: 0.6;
       cursor: not-allowed;
-      background-color: $danger-color; /* Цвет фона для неактивной кнопки (можно оставить таким же) */
-      color: $light-color; /* Цвет текста для неактивной кнопки (можно оставить таким же) */
+      background-color: $danger-color;
+      color: $light-color;
    }
 }
