--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -22,7 +22,7 @@
 
    opacity: 0;
    transform: translateY(-20px);
-   animation: fadeIn 0.3s ease forwards;
+   animation: fadeIn 0.3s ease forwards 0.1s;
 
    @keyframes fadeIn {
       to {
