--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,9 +9,10 @@
 
    &__container {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
-      justify-content: flex-end;
+      justify-content: space-between;
    }
 }
 
