--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,8 +11,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: space-between;
-      justify-content: space-between;
+      justify-content: flex-end;
    }
 }
 
