--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -1,5 +1,18 @@
 .actions {
    padding: 16px 0;
    display: flex;
+   flex-wrap: wrap;
    gap: 8px;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.buttons {
+   padding: 16px 0;
+   display: flex;
+   gap: 8px;
+}
+
+.search-input {
+   flex: 0 1 393px;
 }
