--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -6,10 +6,19 @@
    left: 0;
    width: 100%;
    height: 100%;
+   opacity: 0;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
+
+   animation: fadeIn 0.2s ease forwards;
+
+   @keyframes fadeIn {
+      to {
+         opacity: 1;
+      }
+   }
 }
 
 .modal {
