--- a/src/components/table/Table.module.scss
+++ b/src/components/table/Table.module.scss
@@ -7,68 +7,73 @@
 .table {
    width: 100%;
    border-collapse: collapse;
-}
 
-.th,
-.td {
-   border: 1px solid #ccc;
-   padding: 8px;
-}
-
-.th {
-   background-color: #f2f2f2;
-   font-weight: bold;
-   text-align: left;
-
-   &:not([data-sort]) {
-      font-weight: normal;
-      cursor: default;
-   }
-
-   &[data-sort] {
-      cursor: pointer;
-      position: relative;
-      &::after {
-         content: attr(data-arrow);
-         position: absolute;
-         left: 100%;
-         top: 50%;
-         transform: translate(-150%, -50%);
-      }
-   }
-}
-
-.tbody {
-   & .tr {
-      position: relative;
-      cursor: pointer;
-
-      &:nth-child(even) {
-         background-color: #f9f9f9;
-      }
-
-      &:hover {
-         background-color: #e6f7ff;
-      }
-   }
-}
-
-.load-more {
-   text-align: center;
-   font-weight: bold;
-   background-color: #f2f2f2;
-
-   button {
-      width: 100%;
-      height: 100%;
+   th,
+   td {
       border: 1px solid #ccc;
       padding: 8px;
+   }
 
-      &:disabled {
-         opacity: 0.6;
-         cursor: not-allowed;
-         background-color: #bfbfbf;
-         color: #999;
+   th {
+      background-color: #f2f2f2;
+      font-weight: bold;
+      text-align: left;
+
+      &:not([data-sort]) {
+         font-weight: normal;
+         cursor: default;
+      }
+
+      &[data-sort] {
+         cursor: pointer;
+         position: relative;
+         &::after {
+            content: attr(data-arrow);
+            position: absolute;
+            left: 100%;
+            top: 50%;
+            transform: translate(-150%, -50%);
+         }
+      }
+   }
+
+   tbody {
+      & tr {
+         position: relative;
+         cursor: pointer;
+
+         &:nth-child(even) {
+            background-color: #f9f9f9;
+         }
+
+         &:hover {
+            background-color: #e6f7ff;
+         }
+      }
+   }
+
+   tfoot {
+      tr {
+         td {
+            padding: 0;
+            text-align: center;
+            font-weight: bold;
+            background-color: #f2f2f2;
+
+            button {
+               width: 100%;
+               height: 100%;
+               border: 1px solid #ccc;
+               padding: 8px;
+
+               &:disabled {
+                  opacity: 0.6;
+                  cursor: not-allowed;
+                  background-color: #bfbfbf;
+                  color: #999;
+               }
+            }
+         }
       }
    }
 }
